codex-rs/tui_app_server/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: tui_app_server/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v1.0.0)                                      │
│                                                                │
│ 访问 https://chatgpt.com/codex/settings/usage 获取最新         │
│ 限额和积分信息                                                 │
│                                                                │
│  模型:          gpt-5.1-codex (推理 none, 摘要 auto)           │
│  目录:          /workspace/tests                               │
│  权限:          自定义 (read-only, on-request)                 │
│  Agents.md:     ../AGENTS.md                                   │
│                                                                │
│  Token usage:   2K 总计  (1.4K 输入 + 600 输出)                │
│  Context window:   剩余 100% (2.2K 已用 / 272K)                │
│  5h 限额:       [███████████░░░░░░░░░] 剩余 55% (resets 09:25) │
│  Weekly 限额:   [██████████████░░░░░░] 剩余 70% (resets 09:55) │
│  积分:          38 积分                                        │
╰────────────────────────────────────────────────────────────────╯
