codex-rs/tui_app_server/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_forked_from.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v1.0.0)                               │
│                                                         │
│ 访问 https://chatgpt.com/codex/settings/usage 获取最新  │
│ 限额和积分信息                                          │
│                                                         │
│  模型:         gpt-5.1-codex-max (推理 默认, 摘要 自动) │
│  目录:         /workspace/tests                         │
│  权限:         自定义 (只读, 按需批准)                  │
│  Agents.md:    ../AGENTS.md                             │
│  会话:         0f0f3c13-6cf9-4aa4-8b80-7d49c2f1be2e     │
│  派生自:       e9f18a88-8081-4e51-9d4e-8af5cde2d8dd     │
│                                                         │
│  Token 用量:   1.2K 总计  (800 输入 + 400 输出)         │
│  上下文窗口:   剩余 100% (1.2K 已用 / 272K)             │
│  限额:         数据暂不可用                             │
╰─────────────────────────────────────────────────────────╯
