codex-rs/tui_app_server/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_reasoning_details.snap
---
source: tui_app_server/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v1.0.0)                                      │
│                                                                │
│ 访问 https://chatgpt.com/codex/settings/usage 获取最新         │
│ 限额和积分信息                                                 │
│                                                                │
│  模型:          gpt-5.1-codex-max (推理 high, 摘要 detailed)   │
│  目录:          /workspace/tests                               │
│  权限:          默认                                           │
│  Agents.md:     ../AGENTS.md                                   │
│                                                                │
│  Token usage:   1.9K 总计  (1K 输入 + 900 输出)                │
│  Context window:   剩余 100% (2.25K 已用 / 272K)               │
│  5h 限额:       [██████░░░░░░░░░░░░░░] 剩余 28% (resets 03:14) │
│  Weekly 限额:   [███████████░░░░░░░░░] 剩余 55% (resets 03:24) │
╰────────────────────────────────────────────────────────────────╯
